# neuralnet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  network
.github/workflows/: analysis.yml  publish.yml
data/: .gitignore
src/: CMakeLists.txt
src/networks/: CMakeLists.txt  mnist.cpp
src/networks/common/: debug_gui.cpp  debug_gui.h
src/neuralnet/: CMakeLists.txt  neuralnet.h  nnpch.h
src/neuralnet/neuralnet/: compression.cpp  compression.h  cpu_evaluator.cpp  evaluator.h  loader.cpp  loader.h  network.cpp  network.h  resource_data.cpp.in  resources.cpp.in  resources.h  trainer.cpp  trainer.h  util.cpp  util.h
src/neuralnet/neuralnet/evaluators/: cpu_evaluator.cpp  evaluators.cpp  evaluators.h  vulkan_evaluator.cpp
src/neuralnet/neuralnet/resources/: README.md  test.txt
src/neuralnet/neuralnet/resources/glsl/: backpropagation.glsl  deltas.glsl  evaluation.glsl
src/neuralnet/neuralnet/resources/glsl/include/: buffers.glsl  functions.glsl
src/nn_resource_generator/: CMakeLists.txt  main.cpp
